@@ -1,3 +1,8 @@
+2011-02-01  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/xml/manual/debug.xml: Use GDB instead of gdb.
+	Adjust link to GDB manual.
+
 2011-01-31  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/c++config (_GLIBCXX_DEPRECATED): To
